Update Dockerfile - edit ENTRYPOINT